--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -46,5 +46,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>None</string>
+			<key>CFBundleURLName</key>
+			<string>testApp</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>testlink</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
